LPS-116645 Fix z-index size to be changed only when the fieldset modal is opened

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_upper_toolbar.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_upper_toolbar.scss
@@ -4,7 +4,7 @@
 	top: $controlMenuHeight;
 	transition: width 0.5s $animation;
 	width: 100%;
-	z-index: 10;
+	z-index: 60;
 
 	@media (max-width: 576px) {
 		top: $mobile_controlMenuHeight;
