--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/form-builder/_actionable.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/form-builder/_actionable.scss
@@ -12,7 +12,7 @@
 	position: absolute;
 	top: -30px;
 	width: auto;
-	z-index: 1050;
+	z-index: 50;
 
 	&.ddm-fieldset {
 		background-color: #5aca75;
